--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "electron-builder"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "electron-store": "^7.0.0"
   },
